# Python1

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
.github/: copilot-instructions.md
app/: __init__.py  database.py  kafka_producer.py  langgraph_workflow.py  main.py  redis_cache.py
k8s/: configmap.yaml  deployment.yaml  redis.yaml
tests/: test_database.py  test_kafka.py  test_main.py  test_redis_cache.py  test_workflow.py
